--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <body>
+    <!-- the entire body must be written by student -->
+    <div class="main">
+      <h1>Testimonials</h1>
+      <div class="first">
+		<p class="fpara">This product is amazing! I highly recommend it to anyone is need of a solution like this.</p>
+		<p class="spara">-<i>John Doe</i></p>
+	  </div>
+      <div class="second">
+		<p class="fpara">I have been using this for a few weeks now and it has completely transformed my workflow.<p>
+		<p class="spara">-<i>Jane Smith</i></p>
+	  </div>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
