--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
       <h1>Testimonials</h1>
       <div class="first">
 		<p class="fpara">This product is amazing! I highly recommend it to anyone is need of a solution like this.</p>
-		<p class="spara">-John Doe</p>
+		<p class="spara">-<i>John Doe</i></p>
 	  </div>
       <div class="second">
 		<p class="fpara">I have been using this for a few weeks now and it has completely transformed my workflow.<p>
-		<p class="spara">-Jane Smith</p>
+		<p class="spara">-<i>Jane Smith</i></p>
 	  </div>
     </div>
     <script type="text/javascript" src="./script.js"></script>
